--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: honeydew;
+    background-color: yellow;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 1000px;
 }
